--- a/PewsClient/MainWindow.xaml
+++ b/PewsClient/MainWindow.xaml
@@ -17,34 +17,37 @@
                 <TextBlock x:Name="txtTimeSync">Sync</TextBlock>
             </StatusBarItem>
         </StatusBar>
-        <Grid x:Name="boxEqkInfo" DockPanel.Dock="Top">
+        <Grid x:Name="boxEqkInfo" DockPanel.Dock="Top" Background="#FF3F3F">
             <!-- 상단 -->
-            <StackPanel Grid.Column="0"
-                        Background="#F64D50"
-                        HorizontalAlignment="Left" VerticalAlignment="Top"
-                        Margin="0,0,0,2">
-                <StackPanel.Resources>
-                    <Style TargetType="TextBlock">
-                        <Setter Property="Foreground" Value="#FFB240"></Setter>
-                    </Style>
-                </StackPanel.Resources>
-                <TextBlock x:Name="txtEqkLoc" Margin="4,4,4,0" FontSize="16" TextWrapping="Wrap">어디 무슨군 서북서쪽 00km 지역</TextBlock>
-                <WrapPanel Orientation="Horizontal" Margin="4,0,4,4">
-                    <StackPanel Orientation="Horizontal" Margin="0,0,8,0">
-                        <TextBlock FontSize="16" VerticalAlignment="Center">진도</TextBlock>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <WrapPanel x:Name="boxEqkInfoHeader" Background="Red">
+                <TextBlock x:Name="txtEqkNotiKind" Margin="4,2,10,2" FontSize="13">지진조기경보</TextBlock>
+                <TextBlock x:Name="txtEqkDate" Margin="4,2,10,2" FontSize="13">1998-02-12</TextBlock>
+                <TextBlock x:Name="txtEqkTime" Margin="4,2,10,2" FontSize="13">00:00:00</TextBlock>
+            </WrapPanel>
+            <StackPanel Grid.Row="1">
+                <TextBlock x:Name="txtEqkLoc" Margin="4,2,4,-2" FontSize="17" TextWrapping="Wrap">어디 무슨군 서북서쪽 00km 지역</TextBlock>
+                <WrapPanel Orientation="Horizontal" Margin="4,0,4,2">
+                    <StackPanel Orientation="Horizontal" Margin="0,0,32,0">
+                        <TextBlock FontSize="16" VerticalAlignment="Center">진도:</TextBlock>
                         <TextBlock x:Name="txtMmi" Margin="4,0,0,0" FontSize="20"
                                        VerticalAlignment="Center">Ⅵ</TextBlock>
                     </StackPanel>
-                    <StackPanel Orientation="Horizontal" Margin="0,0,8,0">
-                        <TextBlock FontSize="16" VerticalAlignment="Center">규모</TextBlock>
-                        <TextBlock x:Name="txtMag" Margin="4,0,0,0" FontSize="20"
+                    <StackPanel Orientation="Horizontal" Margin="0,0,32,0">
+                        <TextBlock FontSize="16" VerticalAlignment="Center">규모:</TextBlock>
+                        <TextBlock x:Name="txtMag" Margin="4,0,2,0" FontSize="20"
                                    VerticalAlignment="Center">4.2</TextBlock>
+                        <TextBlock FontSize="16" VerticalAlignment="Center">M</TextBlock>
+                        <TextBlock FontSize="11" VerticalAlignment="Bottom">L</TextBlock>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal">
-                        <TextBlock FontSize="16" VerticalAlignment="Center">깊이</TextBlock>
+                        <TextBlock FontSize="16" VerticalAlignment="Center">깊이:</TextBlock>
                         <TextBlock x:Name="txtDepth" Margin="4,0,2,0" FontSize="20"
                                    VerticalAlignment="Center">-</TextBlock>
-                        <TextBlock FontSize="20" VerticalAlignment="Center">km</TextBlock>
+                        <TextBlock FontSize="18" VerticalAlignment="Center">km</TextBlock>
                     </StackPanel>
                 </WrapPanel>
             </StackPanel>
