--- a/PewsClient/MainWindow.xaml
+++ b/PewsClient/MainWindow.xaml
@@ -63,7 +63,13 @@
             <Image x:Name="canvas" Stretch="UniformToFill" RenderOptions.BitmapScalingMode="HighQuality"></Image>
             <WrapPanel Orientation="Vertical" HorizontalAlignment="Right" VerticalAlignment="Bottom">
                 <!-- 우하단 -->
-                <StackPanel Width="60" Margin="0,16,2,2">
+                <Border x:Name="boxWarningHint" Width="120" Height="34" Margin="0,8,8,0"
+                        BorderThickness="2" BorderBrush="Gray"
+                        HorizontalAlignment="Right">
+                    <TextBlock x:Name="txtWarningHint" FontSize="20" TextAlignment="Center"
+                               Foreground="Gray" VerticalAlignment="Center">IDLE</TextBlock>
+                </Border>
+                <StackPanel Width="60" Margin="0,16,2,0" HorizontalAlignment="Right">
                     <StackPanel.Resources>
                         <Style TargetType="TextBlock">
                             <Setter Property="FontSize" Value="16"></Setter>
