--- a/PewsClient/MainWindow.xaml
+++ b/PewsClient/MainWindow.xaml
@@ -35,6 +35,9 @@
             <Menu Grid.Column="1" VerticalAlignment="Center" Margin="2,0">
                 <MenuItem Header="메뉴" Padding="8,1">
                     <MenuItem x:Name="chkPin" Header="UI 고정" IsCheckable="True" Checked="CheckBoxPin_Changed" Unchecked="CheckBoxPin_Changed"></MenuItem>
+                    <Separator/>
+                    <MenuItem x:Name="chkSetLocation" Header="위치 설정 모드" IsCheckable="True"></MenuItem>
+                    <MenuItem Header="위치 제거" Click="MenuItemRemoveHome_Click"></MenuItem>
                 </MenuItem>
             </Menu>
         </Grid>
@@ -74,7 +77,8 @@
             </StackPanel>
         </Grid>
         <Grid Background="#233062">
-            <Image x:Name="canvas" Stretch="UniformToFill" RenderOptions.BitmapScalingMode="HighQuality"></Image>
+            <Image x:Name="canvas" Stretch="UniformToFill" RenderOptions.BitmapScalingMode="HighQuality"
+                   MouseDown="ImageCanvas_MouseDown"></Image>
             <Grid HorizontalAlignment="Right">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
